0x00-hello_world/5-printf.c:
th proper grammar, but the outcome is a piece of arti,\n")
      |                                                                     ^
      |                                                                     ;
    9 | return (0);
      | ~~~~~~                                                               
5-printf.c:10:1: error: control reaches end of non-void function [-Werror=return-type]
   10 | }
      | ^
cc1: all warnings being treated as errorsii
